// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <h1
    className="MuiTypography-root-98 MuiTypography-display2-101 MuiTypography-gutterBottom-116"
  >
    Title
  </h1>
  <h2
    className="MuiTypography-root-98 MuiTypography-title-104 MuiTypography-colorPrimary-119"
  >
    Subtitle
  </h2>
</div>
`;

exports[`snapshot with neither title nor pageTitle 1`] = `null`;

exports[`snapshot with only pageTitle 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <h2
    className="MuiTypography-root-98 MuiTypography-title-104 MuiTypography-colorPrimary-119"
  >
    Subtitle
  </h2>
</div>
`;

exports[`snapshot with only title 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-55"
>
  <h1
    className="MuiTypography-root-98 MuiTypography-display2-101 MuiTypography-gutterBottom-116"
  >
    Title
  </h1>
</div>
`;
